# pdf-decrypt-mcp

./: .gitignore  NETWORK_TROUBLESHOOTING.md  OFFLINE_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  README_UVX.md  USAGE_GUIDE.md  UVX_CONFIG.md  UVX_DEPLOYMENT.md  deploy_github.md  install.py  push_to_github.py  pyproject.toml  pyproject_uvx.toml  setup.py  test.py
src/pdf_decrypt_mcp/: __init__.py  pdf_decryptor.py  server.py
