[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-decrypt-mcp"
version = "1.0.0"
description = "PDF Decryption MCP Server"
authors = [{name = "PDF Decrypt Service", email = "decrypt@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "PyPDF2>=3.0.0",
    "PyCryptodome>=3.15.0"
]

[project.scripts]
pdf-decrypt-mcp = "pdf_decrypt_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"